--- a/styeels/style.css
+++ b/styeels/style.css
@@ -42,6 +42,11 @@
   width: 569px;
   left: 206px;
   top: 100px;
+  background: rgba(241, 91, 34, 0.2);
+  
+  
+  
+  
 }
 .banner-title {
   position: absolute;
@@ -50,3 +55,35 @@
   left: 876px;
   top: 1178px;
 }
+.banner-head {
+  font-weight: 700;
+  font-size: 40px;
+  margin-bottom: 26.5px;
+}
+.banner-description {
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 17.5px;
+}
+.unordered-list {
+  margin-bottom: 15px;
+  line-height: 25px;
+  list-style: none;
+  
+}
+li:before{
+    content: "\f00c";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 700;
+    color: aqua;
+    margin-right: 5px;
+}
+.my-plans{
+    margin-top: 200px;
+    text-align: center;
+}
+
+    
+   
+
+
